--- a/ETAW/src/main/webapp/WEB-INF/web.xml
+++ b/ETAW/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         <!--别名-->
         <servlet-name>login</servlet-name>
         <!--servlet所在的类-->
-        <servlet-class>com.zpj.servlet.LoginServelet</servlet-class>
+        <servlet-class>com.zpj.servlet.LoginServlet</servlet-class>
 
     </servlet>
 
@@ -15,7 +15,18 @@
         <!--别名-->
         <servlet-name>login</servlet-name>
         <!--资源名-->
-        <url-pattern>/LoginServelet</url-pattern>
+        <url-pattern>/LoginServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>smsServlet</servlet-name>
+        <servlet-class>com.zpj.servlet.SmsLoginServlet</servlet-class>
+
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>smsServlet</servlet-name>
+        <url-pattern>/SmsLoginServlet</url-pattern>
     </servlet-mapping>
     <!--<welcome-file-list>-->
         <!--<welcome-file>../test.jsp</welcome-file>-->
