--- a/ETAW/src/main/java/analysis/DBUtil/db.properties
+++ b/ETAW/src/main/java/analysis/DBUtil/db.properties
@@ -4,7 +4,7 @@ driver=oracle.jdbc.OracleDriver
 
 #连接数据库的URL
 
-url=jdbc:oracle:thin:@localhost:1521:orcl
+url=jdbc:oracle:thin:@localhost:1521:system
 
 #用户名
 
