--- a/ETAW/src/main/webapp/WEB-INF/web.xml
+++ b/ETAW/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>InsertMultiWorkerServlet</servlet-name>
+        <servlet-class>com.zpj.servlet.InsertMultiWorkerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>InsertMultiWorkerServlet</servlet-name>
+        <url-pattern>/InsertMultiWorkerServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>findPassServlet</servlet-name>
         <servlet-class>com.zpj.servlet.FindPassServlet</servlet-class>
     </servlet>
