--- a/ETAW/src/main/webapp/WEB-INF/web.xml
+++ b/ETAW/src/main/webapp/WEB-INF/web.xml
@@ -92,6 +92,7 @@
         <servlet-name>findPassServlet</servlet-name>
         <url-pattern>/FindPassServlet</url-pattern>
     </servlet-mapping>
+
     <servlet>
         <servlet-name>leftRatioServlet</servlet-name>
         <servlet-class>com.zpj.servlet.LeftRatioServlet</servlet-class>
@@ -99,6 +100,15 @@
     <servlet-mapping>
         <servlet-name>leftRatioServlet</servlet-name>
         <url-pattern>/LeftRatioServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>HistoryServlet</servlet-name>
+        <servlet-class>com.zpj.servlet.HistoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>HistoryServlet</servlet-name>
+        <url-pattern>/HistoryServlet</url-pattern>
     </servlet-mapping>
 
 
